objects/PC_EnrollmentWizardPage__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_ComponentName__c</fullName>
        <label>Component Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Config2__c</fullName>
        <description>Configuration settings that are specific to the Enrollment Wizard Page. The format and specification of the attributes is implementation specific, but a JSON structure is recommended for consistency and conciseness. Recommended to use this field in place of Config if this field is blank value from Config will be used.</description>
        <inlineHelpText>Configuration settings that are specific to the Enrollment Wizard Page. The format and specification of the attributes is implementation specific, but a JSON structure is recommended for consistency and conciseness. Recommended to use this field in place of Config if this field is blank, value from Config will be used.</inlineHelpText>
        <label>Config2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Config__c</fullName>
        <description>Configuration settings that are specific to the Enrollment Wizard Page. The format and specification of the configuration is implementation specific, but a JSON structure is recommended for consistency and conciseness. Recommended to use Config2 field which is of higher character length.</description>
        <inlineHelpText>Configuration settings that are specific to the Enrollment Wizard Page. The format and specification of the attributes is implementation specific, but a JSON structure is recommended for consistency and conciseness. Recommended to use Config2 field which is of higher character length.</inlineHelpText>
        <label>Config</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_EnrollmentWizardPageLabel__c</fullName>
        <description>Label for Enrollment Wizard Page that will be displayed on the Enrollment Wizard Progress Indicator.
You may also specify the fully qualified custom label path ($Label.namespace.labelName).
If this field is blank, then the value in the masterLabel field will be considered for Page name.</description>
        <inlineHelpText>Label for Enrollment Wizard Page (Progress Indicator).
You may also specify the fully qualified custom label path ($Label.namespace.labelName).
If this field is blank, then the value in the masterLabel field will be considered for Page name.</inlineHelpText>
        <label>Enrollment Wizard Page Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Ordinal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ordinal</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Processor__c</fullName>
        <description>The name of the Apex class that implements the PC_EnrollmentWizardPageProcessor interface and will be called to perform enrollment processing for the page. The default name of the processor is &lt;PC_ComponantName__c&gt; + &quot;Processor&quot;, which will be used if this field is left blank.</description>
        <inlineHelpText>The default name of the processor is &lt;PC_ComponantName__c&gt; + &quot;Processor&quot;, which will be used if this field is left blank.</inlineHelpText>
        <label>Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ProgramCode__c</fullName>
        <description>Program code of the engagement program associated with the enrollment wizard page.</description>
        <inlineHelpText>Program code of the engagement program associated with the enrollment wizard page.</inlineHelpText>
        <label>Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Enrollment Wizard Page</label>
    <pluralLabel>Enrollment Wizard Pages</pluralLabel>
</CustomObject>